@@ -57,18 +57,23 @@ The command can include arguments."
   ;; The format of error messages used by Hugs.
   `(("^ERROR \"\\(.+?\\)\"\\(:\\| line \\)\\([0-9]+\\) - " 1 3)
     ;; Format of error messages used by GHCi.
-    ("^\\(.+?\\):\\([0-9]+\\):\\(\\([0-9]+\\):\\)?\\( \\|\n +\\)\\(Warning\\)?"
-     1 2 4 ,@(if (fboundp 'compilation-fake-loc) '((6))))
+    ("^\\(.+?\\):\\([0-9]+\\):\\(\\([0-9]+\\):\\)?\\( \\|\n *\\)\\(Warning\\)?"
+     1 2 4 ,@(if (fboundp 'compilation-fake-loc)
+                 '((6) nil (5 '(face nil font-lock-multiline t)))))
     ;; Runtime exceptions, from ghci.
     ("^\\*\\*\\* Exception: \\(.+?\\):(\\([0-9]+\\),\\([0-9]+\\))-(\\([0-9]+\\),\\([0-9]+\\)): .*"
      1 ,@(if (fboundp 'compilation-fake-loc) '((2 . 4) (3 . 5)) '(2 3)))
-    ;; GHCI uses two different forms for line/col ranges, depending on
+    ;; GHCi uses two different forms for line/col ranges, depending on
     ;; whether it's all on the same line or not :-(
     ("^\\*\\*\\* Exception: \\(.+?\\):\\([0-9]+\\):\\([0-9]+\\)-\\([0-9]+\\): .*"
      1 2 ,(if (fboundp 'compilation-fake-loc) '(3 . 4) 3))
-    ;; Info xrefs.
+    ;; Info messages.  Not errors per se.
     ,@(if (fboundp 'compilation-fake-loc)
-          `((,inferior-haskell-info-xref-re
+          `(;; Another GHCi pattern used in type errors.
+            ("^[ \t]+at \\(.+\\):\\([0-9]+\\):\\([0-9]+\\)-\\([0-9]+\\)$"
+             1 2 (3 . 4) 0)
+            ;; Info xrefs.
+            (,inferior-haskell-info-xref-re
              1 2 3 0))))
   "Regexps for error messages generated by inferior Haskell processes.
 The format should be the same as for `compilation-error-regexp-alist'.")
